@@ -24,6 +24,9 @@ Where "NUMBER" is the bug number.
    receiving messages [1122089].
  - The DCC windows now allow multiple selection and the columns auto
    resize (Dan Fruehauf).
+ - Added "CTCP Sound to Channel" event.
+ - You can now drag and drop files into dialog windows to start file
+   transfers.
  - Perl: <fill me in>.
  - 
  - 
